@@ -9,8 +9,8 @@ public class Parser {
     public static Command parse(String fullCommand){
         ArrayList<String> instruction = new ArrayList<>(Arrays.asList(fullCommand.split(" ")));
         //break the alice.command into args
-        String action = instruction.getFirst();
-        instruction.removeFirst();
+        String action = instruction.get(0);
+        instruction.remove(0);
 
         switch (action) {
             case "bye":
@@ -22,19 +22,19 @@ public class Parser {
                     return new ListCommand(action, String.join(" ", instruction));
             case "delete":
                 try {
-                    return new DeleteCommand(Integer.parseInt(instruction.getFirst())-1);
+                    return new DeleteCommand(Integer.parseInt(instruction.get(0))-1);
                 } catch (ArrayIndexOutOfBoundsException e){
                     return new IncorrectCommand();
                 }
             case "mark":
                 try {
-                    return new MarkCommand(Integer.parseInt(instruction.getFirst())-1, true);
+                    return new MarkCommand(Integer.parseInt(instruction.get(0))-1, true);
                 } catch (ArrayIndexOutOfBoundsException e){
                     return new IncorrectCommand();
                 }
             case "unmark":
                 try {
-                    return new MarkCommand(Integer.parseInt(instruction.getFirst())-1, false);
+                    return new MarkCommand(Integer.parseInt(instruction.get(0))-1, false);
                 } catch (ArrayIndexOutOfBoundsException e){
                     return new IncorrectCommand();
                 }
